@@ -2617,9 +2617,10 @@ class ZSetRangeByScore extends \Predis\Commands\ZSetRange {
         $opts = array_change_key_case($options, CASE_UPPER);
         $finalizedOpts = array();
         if (isset($opts['LIMIT']) && is_array($opts['LIMIT'])) {
+            $limit = array_change_key_case($opts['LIMIT'], CASE_UPPER);
             $finalizedOpts[] = 'LIMIT';
-            $finalizedOpts[] = $opts['LIMIT'][0];
-            $finalizedOpts[] = $opts['LIMIT'][1];
+            $finalizedOpts[] = isset($limit['OFFSET']) ? $limit['OFFSET'] : $limit[0];
+            $finalizedOpts[] = isset($limit['COUNT']) ? $limit['COUNT'] : $limit[1];
         }
         return array_merge($finalizedOpts, parent::prepareOptions($options));
     }
