@@ -8,7 +8,9 @@ v0.6.1 (2010-xx-xx)
     supported using an associative array passed as the last argument of their 
     respective methods.
 
-  * Added missing support for the LIMIT modifier of ZRANGEBYSCORE.
+  * The LIMIT modifier for ZRANGEBYSCORE can be specified using either: 
+      - an indexed array: array($offset, $count)
+      - an associative array: array('limit' => $limit, 'count' => $count)
 
   * The method Predis\Client::__construct() now accepts also instances of 
     Predis\ConnectionParameters.
